feat: adding component avatar

--- a/core/resources/src/main/res/values/themes.xml
+++ b/core/resources/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.PokeNisum" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.PokeUpax" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/lightYellow</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -14,7 +14,7 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="FullScreenDialogStyle" parent="Theme.PokeNisum">
+    <style name="FullScreenDialogStyle" parent="Theme.PokeUpax">
         <item name="android:windowFullscreen">false</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowIsFloating">false</item>
